# PQ-Aggregation-via-Recursive-SNARKs

./: Cargo.toml  README.md  merge4_sig1024.txt  merge4_sig256.txt  pq_aggregation_log.txt  run_test.sh
Benchmark/XMSS256/: merge2_sig32K.txt  merge2_sig65K.txt  merge2_sig8K.txt  merge4_sig260K.txt  merge4_sig32K.txt  merge4_sig65K.txt  merge8_sig32K.txt
Benchmark/XMSS256-192/: merge4_sig260K.txt
FinalBenchmark/: merge2_sig1024.txt  merge2_sig128.txt  merge2_sig2048.txt  merge2_sig256.txt  merge2_sig4096.txt  merge2_sig512.txt  merge2_sig9192.txt  merge4_sig1024.txt  merge4_sig128.txt  merge4_sig2048.txt  merge4_sig256.txt  merge4_sig4096.txt  merge4_sig512.txt  merge8_sig1024.txt  merge8_sig128.txt  merge8_sig2048.txt  merge8_sig256.txt  merge8_sig4096.txt  merge8_sig512.txt
Profiling/: pq_aggregation_log.txt  prof_posedion_2sig.pb  prof_sha3_4sig.pb  profile_sha3_notprecompiled_merge4.pb  profile_sha3_tinykeccak_2merge_withPKlist_bitfieldVecu8_32k.pb  profile_sha3_tinykeccak_4merge.pb  profile_sha3_tinykeccak_4merge_withPKlist.pb  profile_sha3_tinykeccak_4merge_withPKlistMerklized_bitfieldVecu8_32k.pb  profile_sha3_tinykeccak_4merge_withPKlistVectorized_bitfieldVecu8_32k.pb  profile_sha3_tinykeccak_4merge_withPKlist_bitfieldVecu8_32k.pb  profile_sha3_tinykeccak_8merge_withPKlist.pb  profile_sha3_tinykeccak_8merge_withPKlist_bitfieldVectorize.pb  profile_sha3_tinykeccak_8merge_withPKlist_bitfieldVectorize64.pb  profile_sha3_tinykeccak_8merge_withPKlist_bitfieldVecu8_1024.pb  profile_sha3_tinykeccak_8merge_withPKlist_bitfieldVecu8_256.pb  profile_sha3_tinykeccak_8merge_withPKlist_bitfieldVecu8_64.pb  profile_sha3_unstable_merge4.pb  sha3_tinykeccak_2merge_withPKlist_bitfieldVecu8_32k.txt  sha3_tinykeccak_4merge_withPKlist.txt  sha3_tinykeccak_4merge_withPKlistMerklized_bitfieldVecu8_32k.txt  sha3_tinykeccak_4merge_withPKlistVectorize_bitfieldVecu8_32k.txt  sha3_tinykeccak_4merge_withPKlist_bitfieldVecu8_32k.txt  sha3_tinykeccak_8merge_withPKlist.txt  sha3_tinykeccak_8merge_withPKlist_bitfieldVectorize64.txt  sha3_tinykeccak_8merge_withPKlist_bitfieldVecu8_1024.txt  sha3_tinykeccak_8merge_withPKlist_bitfieldVecu8_256.txt  sha3_tinykeccak_8merge_withPKlist_bitfieldVecu8_64.txt
data-types/: Cargo.toml  build.rs
data-types/src/: lib.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods2/: Cargo.toml
methods2/guest/: Cargo.toml
methods2/guest/src/: main.rs
methods4/: Cargo.toml
methods4/guest/: Cargo.toml
methods4/guest/src/: main.rs
methods8/: Cargo.toml
methods8/guest/: Cargo.toml
methods8/guest/src/: main.rs
src/: lib.rs  main.rs
