[package]
name = "pq-data-types"
version = "0.1.0"
edition = "2021"

[dependencies]
hashsig = { git = "https://github.com/ArdaSaygan/hash-sig-serde.git"}
serde = "1.0.0"
merkle_light = {git = "https://github.com/ArdaSaygan/merkle_light_serde.git"}
tiny-keccak = { version = "2.0", features = ["sha3"] }

[dev-dependencies]


[features]
