[package]
name = "pq-aggregation-guest-2"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.2.5",  default-features = false ,features = ["std", "unstable"] }
hashsig = { git = "https://github.com/ArdaSaygan/hash-sig-serde.git"}
serde = "1.0.0"
pq-data-types = {path = "../../data-types"}

[patch.crates-io]
# Placing these patch statement in the workspace Cargo.toml will add support for all downstream usages of the following crates.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }